# Capstone-ii

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: config.py  dependencies.py  main.py  test.py
backend/app/endpoints/: __init__.py  auth.py  conversation.py  ingestion.py
backend/app/models/: __init__.py  conversation.py  document.py
backend/app/utils/: openai_helper.py  scraper.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/conversations/: route.ts
frontend/app/api/crawl_docs_proxy/: route.ts
frontend/app/api/ingest/: route.ts
frontend/app/api/messages/: route.ts
frontend/app/auth/callback/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: SignupPage.module.css  page.tsx
frontend/app/chat/[chatId]/: page.tsx
frontend/app/home/: page.tsx
frontend/components/: AuthProvider.tsx  ChatHistory.tsx  ChatInput.tsx  ChatWindow.tsx  Header.module.css  Header.tsx  HistoryNav.tsx  Home.tsx  LandingPage.tsx  PageLoader.tsx  ProfileDropdown.tsx
frontend/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatWindow.tsx  DocumentInput.tsx
frontend/components/new/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatWindow.tsx
frontend/components/signup/: ResendEmailConfirm.tsx  UserInfo.tsx
frontend/components/ui/: Button.tsx  Card.tsx
frontend/lib/: supabaseClient.ts  utils.ts
supabase/: README.md  schema.sql
(+1 files in other folders)
