[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["briancook247 <91641631+briancook247@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
openai = "^1.61.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
