[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["briancook247 <91641631+briancook247@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
openai = "^1.61.1"
pinecone = "^6.0.1"
crawl4ai = "^0.4.248"
uvicorn = "^0.34.0"
supabase = "^2.13.0"
playwright = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
